--- a/findyourpet-ui/package.json
+++ b/findyourpet-ui/package.json
@@ -12,6 +12,7 @@
     "@expo/config-plugins": "7.2.2",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
