--- a/findyourpet-ui/package.json
+++ b/findyourpet-ui/package.json
@@ -23,6 +23,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-local-authentication": "~13.4.1",
     "expo-status-bar": "~1.6.0",
+    "immer": "^10.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
