--- a/findyourpet-ui/package.json
+++ b/findyourpet-ui/package.json
@@ -12,6 +12,7 @@
     "@expo/config-plugins": "7.2.2",
     "@expo/webpack-config": "^19.0.0",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/drawer": "^6.5.0",
@@ -29,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-biometrics": "^3.0.1",
+    "react-native-fbsdk-next": "^12.1.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
